# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "playground"
version = "0.1.0"
description = "Jupyter playground for DevLake"
authors = ["Jochum Börger <jochum.borger@xebia.com>","Lennart Tange <lennart.tange@xebia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
sqlalchemy = "^2.0.27"
ipykernel = "^6.29.2"
networkx = "^3.2.1"
mysql-connector-python = "^8.3.0"
pyarrow = "^15.0.0"
graphviz = "^0.20.1"
plotly = "^5.19.0"
nbformat = "^5.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
